--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
     "author": "Ajax.org B.V. <info@ajax.org>",
     "contributors": [
         { "name": "Tim Caswell", "email": "tim@c9.io>" },
-        { "name": "Fabian Jakobs", "email": "fabian@c9.io" }
+        { "name": "Fabian Jakobs", "email": "fabian@c9.io" },
+        "Sten Feldman <exile@chamber.ee> (http://sten.feldman.eesti.ee/)"
     ],
     "name": "vfs-local",
     "description": "A vfs implementation that works on the local filesystem.",
-    "version": "0.3.13",
+    "version": "0.4.0",
     "repository": {
         "type": "git",
         "url": "git://github.com/exsilium/vfs-local.git"
@@ -14,22 +15,18 @@
     "main": "localfs.js",
     "dependencies": {
         "simple-mime": "~0.1.0",
-        "pty.js": "~0.3.0"
+        "node-pty": "~0.6.5"
     },
     "devDependencies": {
-        "chai": "~2.2.0",
-        "mocha": "~2.2.4",
+        "chai": "~3.5.0",
+        "mocha": "~3.4.1",
         "vfs-lint": "~0.0.1"
     },
     "scripts": {
         "test": "git clean -df test/mock; mocha -R spec"
     },
-    "licenses" : [{
-        "type" : "MIT",
-        "url": "http://github.com/exsilium/vfs-local/raw/master/LICENSE"
-
-    }],
+    "license": "MIT",
     "engines": {
-        "node": ">=0.10.0"
+        "node": ">= 4.0.0"
     }
 }
