--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "main": "localfs.js",
     "dependencies": {
         "simple-mime": "~0.1.0",
-        "node-pty": "~0.7.2"
+        "node-pty": "0.9.0-beta18"
     },
     "devDependencies": {
-        "chai": "~4.1.2",
-        "mocha": "~4.0.1",
+        "chai": "~4.2.0",
+        "mocha": "~6.1.4",
         "vfs-lint": "~0.0.1"
     },
     "scripts": {
@@ -33,6 +33,6 @@
     },
     "license": "MIT",
     "engines": {
-        "node": ">= 4.8.5"
+        "node": ">= 4.9.1"
     }
 }
