--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-    "author": "Ajax.org B.V. <info@ajax.org>",
-    "contributors": [
-        {
-            "name": "Tim Caswell",
-            "email": "tim@c9.io>"
-        },
-        {
-            "name": "Fabian Jakobs",
-            "email": "fabian@c9.io"
-        },
-        "Sten Feldman <exile@chamber.ee> (http://sten.feldman.eesti.ee/)"
-    ],
-    "name": "vfs-local",
-    "description": "A vfs implementation that works on the local filesystem.",
-    "version": "0.4.2",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/exsilium/vfs-local.git"
+  "name": "@pylonide/vfs-local",
+  "description": "A vfs implementation that works on the local filesystem.",
+  "author": "Ajax.org B.V. <info@ajax.org>",
+  "contributors": [
+    {
+      "name": "Tim Caswell",
+      "email": "tim@c9.io>"
     },
-    "main": "localfs.js",
-    "dependencies": {
-        "simple-mime": "~0.1.0",
-        "node-pty": "0.9.0-beta19"
+    {
+      "name": "Fabian Jakobs",
+      "email": "fabian@c9.io"
     },
-    "devDependencies": {
-        "chai": "~4.2.0",
-        "mocha": "~5.2.0",
-        "vfs-lint": "~0.0.1"
-    },
-    "scripts": {
-        "test": "git clean -df test/mock; mocha -R spec"
-    },
-    "license": "MIT",
-    "engines": {
-        "node": ">= 4.9.1"
-    }
+    "Sten Feldman <exile@chamber.ee> (http://sten.feldman.eesti.ee/)"
+  ],
+  "version": "0.5.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/pylonide/vfs-local.git"
+  },
+  "main": "localfs.js",
+  "dependencies": {
+    "simple-mime": "~0.1.0",
+    "node-pty": "0.9.0-beta21"
+  },
+  "devDependencies": {
+    "chai": "~4.2.0",
+    "mocha": "~5.2.0",
+    "vfs-lint": "~0.0.1"
+  },
+  "scripts": {
+    "test": "git clean -df test/mock; mocha -R spec"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": ">= 4.9.1"
+  }
 }
